# Flags

./: CMakeLists.txt  CMakePresets.json  README.md  _flags_8hpp.html  _flags_8hpp_source.html  _flags_tests_8cpp-example.html  _int_size_8hpp.html  _int_size_8hpp_source.html  annotated.html  class_s_a_1_1_flags-members.html  class_s_a_1_1_flags.html  classes.html  dir_2d417179c691ff264ca0aaeef529ddb5.html  dir_5e42f1ed0250ef473f569b10c537902f.html  dir_856524284ebe840938865dc061f982fb.html  examples.html  files.html  functions.html  functions_func.html  functions_type.html  globals.html  globals_defs.html  index.html  menudata.js  struct_s_a_1_1_int_size.html
.github/workflows/: test_macos.yml  test_unix.yml  test_windows.yml
Doc/: doxygen.config
Include/SA/Collections/: Flags
Include/SA/Flags/: Flags.hpp  Flags.inl  IntSize.hpp
Tests/: CMakeLists.txt
Tests/Prototype/: CMakeLists.txt
Tests/UnitTests/: CMakeLists.txt  FlagsTests.cpp
search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  defines_0.js  files_1.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  searchdata.js  typedefs_1.js  typedefs_2.js
